<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:scrollbars="vertical">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/file" />
		<EditText android:id="@+id/fileName" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/export_Date" />
    <RadioGroup
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <RadioButton android:id="@+id/since_last_export"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
          android:text="@string/last_export"/>
      <RadioButton android:id="@+id/earliest"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/earliest" />
      <RadioButton android:id="@+id/select_date"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/select_date" />
    </RadioGroup>
	<CheckBox android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email" />
	<Button android:id="@+id/confirm" 
	 	android:text="@string/confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
</LinearLayout>