<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/repeat_every" />
	<EditText android:id="@+id/repeat_every" 
		android:digits="1234567890"
		android:inputType="number"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/repeat_for" />
	<EditText android:id="@+id/repeat_for" 
		android:digits="1234567890"
		android:inputType="number"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"/>
	<Button android:id="@+id/confirm" 
	 	android:text="@string/confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
</LinearLayout>